--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
                 <h1 class="title">Search for a City:</h1>
                 <input id="inputSearch" class="input" type="text" placeholder="Type a City">
                 <button id="searchBtn" class="button is-link is-hovered">Search</button>
-                <div id="pastCity" class="button is-light">
-                </div>
+                <button class="button is-light">City</button>
                 <hr>
-                <!-- <button class="button is-light">City</button> -->
             </article>
         </div>
         <div class="tile is-parent is-9 container">
