--- a/index.html
+++ b/index.html
@@ -3,85 +3,81 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+<!-- header -->
 
 <body>
-    <!-- header (Weather Dashboard) -->
     <header>Weather Dashboard</header>
-    <!-- left column -->
-    <!-- form: label (search for a city) -->
+
     <div class="tile is-ancestor">
         <div class="tile is-parent">
             <article class="tile is-child">
                 <h1 class="title">Search for a City:</h1>
-                <input id="inputSearch" class="input" type="text" placeholder="Type a City">
-                <button id="searchBtn" class="button is-link is-hovered">Search</button>
-                <button class="button is-light">City</button>
+                <div class="input-group mb-3">
+                    <input class="input" type="text" placeholder="Type a City" id="search-city">
+                    <button class="button is-link is-hovered" id="search-button">Search</button>
+                </div>
                 <hr>
-            </article>
+                <ul class="list-group">
+                    <li class="button is-light" data-value=""></li>
+                </ul>
         </div>
         <div class="tile is-parent is-9 container">
-            <article class="tile is-child">
-                <h2 id="city" class="title">City (00/00/0000)</h2>
-                <p id="temp">Temp:</p>
-                <p id="wind">Wind:</p>
-                <p id="humidity">Humidity:</p>
-                <p id="index">UV Index:<span class="index"></span></p>
+            <article class="tile is-child" id="current-weather">
+                <h3 class="city-name mb-1 mt-2 bolder" id="current-city"></h3>
+                <p>Temp:<span id="temperature"></span></p>
+                <p>Wind:<span id="wind-speed"></span></p>
+                <p>Humidity:<span id="humidity"></span></p>
+                <p>UV index:<span class="notification is-danger rounded py-2 px-2 text-white" id="uv-index"></span>
+                </p>
+            </article>
         </div>
-        </article>
     </div>
+
+    <div class="tile is-parent is-9 containerTwo" id="future-weather">
+        <article class="tile is-child">
+            <h2 class="title">5-Day Forecast:</h2>
+            <article class="tile is-child box">
+                <p id="fDate0"></p>
+                <p id="fImg0"></p>
+                <p>Temp:<span id="fTemp0"></span></p>
+                <p>Humidity:<span id="fHumidity0"></span></p>
+            </article>
+            <article class="tile is-child box">
+                <p id="fDate1"></p>
+                <p id="fImg1"></p>
+                <p>Temp:<span id="fTemp1"></span></p>
+                <p>Humidity:<span id="fHumidity1"></span></p>
+            </article>
+            <article class="tile is-child box">
+                <p id="fDate2"></p>
+                <p id="fImg2"></p>
+                <p>Temp:<span id="fTemp2"></span></p>
+                <p>Humidity:<span id="fHumidity2"></span></p>
+            </article>
+            <article class="tile is-child box">
+                <p id="fDate3"></p>
+                <p id="fImg3"></p>
+                <p>Temp:<span id="fTemp3"></span></p>
+                <p>Humidity:<span id="fHumidity3"></span></p>
+            </article>
+            <article class="tile is-child box">
+                <p id="fDate4"></p>
+                <p id="fImg4"></p>
+                <p>Temp:<span id="fTemp4"></span></p>
+                <p>Humidity:<span id="fHumidity4"></span></p>
+            </article>
     </div>
-    <div class="tile is-ancestor">
-        <div class="tile is-parent">
-        </div>
-        <div class="tile is-parent is-9 containerTwo">
-            <article class="tile is-child">
-                <h3 class="title">5-Day Forecast:</h3>
-                <article class="tile is-child box">
-                    <p>00/00/0000</p>
-                    <p>Temp:</p>
-                    <p>Wind:</p>
-                    <p>Humidity:</p>
-                </article>
-                <article class="tile is-child box">
-                    <p>00/00/0000</p>
-                    <p>Temp:</p>
-                    <p>Wind:</p>
-                    <p>Humidity:</p>
-                </article>
-                <article class="tile is-child box">
-                    <p>00/00/0000</p>
-                    <p>Temp:</p>
-                    <p>Wind:</p>
-                    <p>Humidity:</p>
-                </article>
-                <article class="tile is-child box">
-                    <p>00/00/0000</p>
-                    <p>Temp:</p>
-                    <p>Wind:</p>
-                    <p>Humidity:</p>
-                </article>
-                <article class="tile is-child box">
-                    <p>00/00/0000</p>
-                    <p>Temp:</p>
-                    <p>Wind:</p>
-                    <p>Humidity:</p>
-                </article>
-        </div>
-        </article>
+    </article>
     </div>
     </div>
 
-
-    <!-- color of uv index -->
-    <!-- container for five day forecast (loop) -->
-    <!-- date, icon for weather, temp, wind, humidity -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
