added UV Index to the forecast cards

--- a/index.html
+++ b/index.html
@@ -47,30 +47,35 @@
                 <p id="fImg0"></p>
                 <p>Temp: <span id="fTemp0"></span></p>
                 <p>Humidity: <span id="fHumidity0"></span></p>
+                <p>UV index: <span class="notification is-danger rounded py-2 px-2 text-white" id="one"></span>
             </article>
             <article class="tile is-child box">
                 <p id="fDate1"></p>
                 <p id="fImg1"></p>
                 <p>Temp: <span id="fTemp1"></span></p>
                 <p>Humidity: <span id="fHumidity1"></span></p>
+                <p>UV index: <span class="notification is-danger rounded py-2 px-2 text-white" id="two"></span>
             </article>
             <article class="tile is-child box">
                 <p id="fDate2"></p>
                 <p id="fImg2"></p>
                 <p>Temp: <span id="fTemp2"></span></p>
                 <p>Humidity: <span id="fHumidity2"></span></p>
+                <p>UV index: <span class="notification is-danger rounded py-2 px-2 text-white" id="three"></span>
             </article>
             <article class="tile is-child box">
                 <p id="fDate3"></p>
                 <p id="fImg3"></p>
                 <p>Temp: <span id="fTemp3"></span></p>
                 <p>Humidity: <span id="fHumidity3"></span></p>
+                <p>UV index: <span class="notification is-danger rounded py-2 px-2 text-white" id="four"></span>
             </article>
             <article class="tile is-child box">
                 <p id="fDate4"></p>
                 <p id="fImg4"></p>
                 <p>Temp: <span id="fTemp4"></span></p>
                 <p>Humidity: <span id="fHumidity4"></span></p>
+                <p>UV index: <span class="notification is-danger rounded py-2 px-2 text-white" id="five"></span>
             </article>
     </div>
     </article>
